# ProgramLearn

./: .gitmodules  18_ProgramLearn.lnk  README.md  custom-reference.docx
cmake/example/variable/: CMakeLists.txt  README.md
example/SingleSrc/: ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  hello-world.sln  hello-world.vcxproj  hello-world.vcxproj.filters  main.c
example/SingleSrc/Project/: README.md
example/SingleSrc/VSCode/: README.md
example/SingleSrc/cmake/: README.md
example/SingleSrc/cmake/VS2017/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  hello-world.sln  hello-world.vcxproj  hello-world.vcxproj.filters
example/SingleSrc/cmake/VS2022/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  hello-world.sln  hello-world.vcxproj  hello-world.vcxproj.filters
example/SingleSrc/cmake/ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
example/SingleSrc/doxygen/: Doxyfile
example/SingleSrc/doxygen/html/: _r_e_a_d_m_e_8md.html  files.html  globals.html  globals_func.html  index.html  main_8c.html  md__e_1_01__adunas_02__english_path_07_program_18__program_learn__program_learn_example__single_src__r_e_a_d_m_e.html  md__r_e_a_d_m_e.html  navtreedata.js  navtreeindex0.js  pages.html
example/SingleSrc/doxygen/html/search/: all_2.js  (+1 more)
example/SingleSrc/termianl/: README.md
(+208 files in other folders)
